# btc-predictor

./: .dockerignore  .env.example  .gitignore  .monitor_5027.sh  Dockerfile  RAILWAY.md  README.md  RELEASE-beta-1.0.md  RELEASE-beta-1.1.md  RELEASE-beta-1.2.md  RELEASE-beta-2.0.md  RELEASE-beta-2.1.md  VERSION  config.yaml  eth_aligned_index_hourly_bot.yaml  pyproject.toml  railway.toml  requirements.txt  start.sh
dashboard/: .env.local.example  Dockerfile  README.md  package.json
data/: .persistent_volume  bot_daily_risk.json
docs/: BTC_Predictor_Bot_Design_Report.md  Kalshi_Crypto_Desk_Pitch.md  PnL_First_Ownership.md  REVERT.md
scripts/: _tmp_check_v3_status.py  analyze_bot_logs.py  analyze_strategy_last_10h.py  backfill_1h_candles_railway.py  backfill_bot_no_pnl.py  backfill_kalshi_predictions.py  backfill_phantom_settlement.py  backfill_rollover_settlement.py  backtest.py  backtest_hourly_deploy_compare.py  backtest_hourly_v1_v2_compare.py  backtest_hourly_v3_pressing.py  backtest_pnl_first_focused.py  backtest_pnl_first_midhour_exits.py  backtest_pnl_first_walkforward.py  backtest_structure_memory_sweep.py  backtest_structure_memory_sweep_v2.py  backtest_structure_memory_sweep_v3.py  backup_logs.py  bootstrap_index_candles.py  calibrate_hourly_v2_from_backtest.py  calibration_report.py  collect_historical.py  fetch_production_bot_data.py  fresh_start_all_production_endpoints.py  fresh_start_production_bots.py  generate_design_report_pdf.py  generate_pitch_pdf.py  kalshi_pnl_report.py  kalshi_upgrade_advanced.py  mark_regroup_milestones.py  (+30 more)
src/: __init__.py  (+2 more)
(+340 files in other folders)
