[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "btc-predictor"
version = "0.1.0"
description = "Probabilistic BTC prediction assistant with calibration and paper trading"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
